test/scc_test/exp/semantic-errors/055.a
055.t:3:5: error: expression must be a modifiable lvalue